--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="main">
+	<div>
      <p id="heading"><u>This is a Heading</u></p>
 	</div>
     <script type="text/javascript" src="./script.js">
